--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.container {
+  max-width: 75rem;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0 auto;
+  background-color: #eee;
+  padding: 1.875rem;
 }
 
-.App-link {
-  color: #61dafb;
+.posts{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(17.5rem, 1fr));
+  gap: 1.875rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post{
+  background: #fff;
+  box-shadow: 0 0 0.625rem rgba(0, 0, 0, 0.1);
+  transition: transform 200ms ease-in-out;
+}
+
+.post:hover{
+  transform: scale(1.01);
+}
+
+.post img{
+  max-width: 100%;
+}
+
+.post-content{
+  padding: 1.875rem;
 }
